<resources>
    <string name="app_name">TapLock</string>
    <string name="shortcut_long_label">Lock screen</string>
    <string name="lock_screen">Lock</string>
    <string name="Title">Screen Off</string>
    <string name="subtitle">Create a shortcut to quickly turn off your screen</string>
    <string name="imgDescription">Lock Icon</string>
    <string name="description">This app creates a home screen shortcut that turns off your screen with a single tap.</string>
    <string name="permission">This app requires special permissions to function properly.</string>
    <string name="btnPermission">Grant Permissions</string>
    <string name="admin_access_is_granted">Admin access is granted.</string>
    <string name="btnRevoke_permissions">Revoke Permissions</string>
    <string name="btnCreate_home_screen_shortcut">Create Home Screen Shortcut</string>
</resources>